Saturday night refactoring